@@ -1,3 +1,10 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
 HOSTS:
   oel7:
     roles:
@@ -5,8 +12,8 @@ HOSTS:
       - master
       - client
     platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
-    hypervisor: vagrant
+    box:        onyxpoint/oel-7-x86_64
+    hypervisor: <%= hypervisor %>
     yum_repos:
       simp:
         baseurl: https://packagecloud.io/simp-project/6_X_Dependencies/el/7/$basearch
@@ -21,8 +28,8 @@ HOSTS:
     roles:
       - client
     platform:   el-6-x86_64
-    box:        elastic/oel-6-x86_64
-    hypervisor: vagrant
+    box:        onyxpoint/oel-6-x86_64
+    hypervisor: <%= hypervisor %>
     yum_repos:
       simp:
         baseurl: https://packagecloud.io/simp-project/6_X_Dependencies/el/6/$basearch
@@ -37,3 +44,6 @@ CONFIG:
   log_level: verbose
   type: aio
   vagrant_memsize: 256
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
